--- a/appimage-builder.yml
+++ b/appimage-builder.yml
@@ -4,8 +4,8 @@ script:
   - rm -rf AppDir  || true
   # Make usr and icons dirs
   - mkdir -p AppDir/
-  - wget -c "https://cdn.openttd.org/openttd-releases/1.11.0/openttd-1.11.0-linux-ubuntu-bionic-amd64.deb"
-  - dpkg-deb -x openttd-1.11.0-linux-ubuntu-bionic-amd64.deb AppDir
+  - wget -c "https://cdn.openttd.org/openttd-releases/1.11.0/openttd-1.11.0-linux-ubuntu-focal-amd64.deb"
+  - dpkg-deb -x openttd-1.11.0-linux-ubuntu-focal-amd64.deb AppDir
 
 
 AppDir:
@@ -27,40 +27,44 @@ AppDir:
   apt:
     arch: amd64
     sources:
-      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse'
+      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ focal main restricted universe multiverse'
+      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ focal-updates main restricted universe multiverse'
+      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ focal-security main restricted universe multiverse'
         key_url: 'http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x3b4fe6acc0b21f32'
 
     include:
-      - openttd-opengfx
-      - x11-utils
-      - timidity
       - freepats
-      - libfontconfig1
-      - libfreetype6
-      - libgcc1
-      - libicu-le-hb0
-      - libicu60
-      - libiculx60 
+      - libicu66
       - liblzma5
       - liblzo2-2
       - libpng16-16
+      - libsdl1.2debian
       - libsdl2-2.0-0
-      - libstdc++6
+      - libxdg-basedir1
+      - timidity
       - zlib1g
-      - libfluidsynth1
     exclude:
-      - humanity-icon-theme
       - adwaita-icon-theme
-      - python3
-      - python3.6
-      - python3-minimal
-      - python3.6-minimal 
+      - dpkg-dev
+      - humanity-icon-theme
+      - make
+      - patch
       - perl
       - perl-base
       - pkg-config
-      - patch
-      - make
-      - dpkg-dev
+      - python3
+      - python3-minimal
+      - python3.6
+      - python3.6-minimal
+
+  after_bundle: |
+    echo "source /etc/timidity/freepats.cfg" | tee AppDir/etc/timidity/timidity.cfg
+
+  runtime:
+    path_mappings:
+      - /usr/share/games/openttd:$APPDIR/usr/share/games/openttd
+      - /etc/timidity:$APPDIR/etc/timidity
+      - /usr/lib/timidity:$APPDIR/usr/lib/timidity
 
   test:
     fedora:
