--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -44,4 +44,4 @@ AppDir:
       command: ./AppRun
 AppImage:
   arch: x86_64
-  update-information: guess
+  update-information: gh-releases-zsync|dch82|openttd-appimage|latest|*.AppImage.zsync
